# chip-8-bad-apple

./: CMakeLists.txt  Chip8.cpp  Program  Program.cpp  README.md  RLEgenerator.py  deltaGenerator.py  notes.txt
assembler/: CMakeLists.txt  Program.cpp  all instructions.txt  gsndjbsjgbs.txt  myFile.ch8
assembler/include/: Assembler.h  InstructionParser.h
include/: Chip8.h  Display.h  UpdateKeys.h
testing programs/: first program thingy.txt  stack test.txt  testingADD.txt  testingOR.txt  testingSEreg.txt  testingSNE.txt  testingXOR.txt  write sprite test.txt
